# disnake-bot-template-postgres

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  sql_config.sql
.github/workflows/: deploy.yaml  lint-and-format.yaml
ext/: sample_ext.py  system.py
migrations/: makemigration.py
utils/: bot.py  constants.py  database.py  env.py  errors.py  paths.py  views.py
