[tool.poetry]
name = "disnake-bot-template-postgres"
version = "0.1"
description = "A template for speeding up development of discord bots using disnake and postgresql."
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.27.0"
exencolorlogs = "^1.1.1"
disnake = "^2.8.1"
exenenv = "^1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
ruff = "^0.0.270"
isort = "^5.12.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
